--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,1 +1,26 @@
+*
+  box-sizing: border-box
+  padding: 0
+  margin: 0
 
+body
+  font-family: 'Roboto', sans-serif;
+
+.container
+  max-width: 960px
+  margin: 0 auto
+  padding: 0 10px
+  
+
+@import "var"
+
+.button
+  background-color: $main-color
+  font-weight: 500
+  color: #fff
+  border: none
+  border-radius: 5px
+  cursor: pointer
+      
+
+@import "blocks/header"
