--- a/css/main.css
+++ b/css/main.css
@@ -99,4 +99,103 @@ body {
 .contacts__btn-icon {
   margin-right: 7px;
 }
+
+.promo {
+  padding: 67px 0 77px 0;
+  position: relative;
+  background: url(../img/promo-bg.jpeg) center no-repeat;
+  background-size: cover;
+}
+
+.promo::before {
+  content: '111';
+  display: block;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  opacity: .5;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.promo__inner {
+  max-width: 1065px;
+  padding: 0 10px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.promo__cardboard {
+  margin-right: 22px;
+}
+
+.promo__title {
+  font-size: 41px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 15px;
+  line-height: 42px;
+}
+
+.promo__subtitle {
+  display: block;
+  font-size: 28px;
+  font-weight: normal;
+  color: #fff;
+  margin-bottom: 24px;
+}
+
+.promo__form {
+  padding: 30px 26px 32px 27px;
+  max-width: 535px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 4px;
+}
+
+.promo__text {
+  color: #fff;
+  font-size: 20px;
+}
+
+.promo__text_light {
+  font-weight: 300;
+}
+
+.promo__text_bold {
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.promo__inputs {
+  margin-bottom: 12px;
+}
+
+.promo__input-text {
+  padding: 20px 130px 20px 19px;
+  border-radius: 5px;
+  border: none;
+  margin-right: 12px;
+  font-size: 14px;
+  color: #373737;
+}
+
+.promo__input-btn {
+  padding: 20px 16px;
+  font-size: 14px;
+}
+
+.promo__info {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 2.14;
+  color: #fff;
+}
 /*# sourceMappingURL=main.css.map */
