--- a/sass/main.sass
+++ b/sass/main.sass
@@ -37,6 +37,7 @@ body
     width: 46px
     height: 6px
     margin: 12px auto 0 auto 
+@import "blocks/menu"    
 @import "blocks/header"
 @import "blocks/promo"
 @import "blocks/advantages"
