created: section map

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,8 +10,6 @@ body
   max-width: 960px
   margin: 0 auto
   padding: 0 10px
-  
-
 
 @import "var"
 
@@ -46,6 +44,7 @@ body
 @import "blocks/production"
 @import "blocks/our-clients"
 @import "blocks/reviews"
+@import "blocks/map"
 @import "blocks/footer"
 @import "blocks/modal"
 
