--- a/css/main.css
+++ b/css/main.css
@@ -769,6 +769,117 @@ body {
   padding: 0 !important;
 }
 
+.map {
+  position: relative;
+  height: 550px;
+}
+
+.map__map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.map .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  height: 100%;
+}
+
+.map__box {
+  padding: 33px 40px 40px 33px;
+  background-color: #fff;
+  z-index: 2;
+  width: 313px;
+}
+
+.map__wrap-address {
+  padding-left: 30px;
+  position: relative;
+  margin-bottom: 31px;
+}
+
+.map__wrap-address::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  vertical-align: bottom;
+  background: url("../icons/icon_address.png") center no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 25px;
+}
+
+.map__wrap-address > .map__info {
+  margin-bottom: 13px;
+}
+
+.map__wrap-phone {
+  padding-left: 30px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+.map__wrap-phone::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  vertical-align: bottom;
+  background: url("../icons/icon_phone.png") center no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 25px;
+}
+
+.map__wrap-phone > .map__info {
+  margin-bottom: 7px;
+}
+
+.map__wrap-email {
+  padding-left: 30px;
+  position: relative;
+}
+
+.map__wrap-email::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  vertical-align: bottom;
+  background: url("../icons/icon_email.png") center no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 25px;
+}
+
+.map__title {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #373737;
+  margin-bottom: 7px;
+}
+
+.map__info {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 18px;
+  color: #373737;
+}
+
+.map__btn {
+  padding: 17px 28px;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 500;
+  margin-top: 14px;
+}
+
 .footer {
   padding: 36px 0 39px;
   background-color: #313131;
@@ -792,7 +903,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   position: fixed;
-  z-index: 3;
+  z-index: 99999;
   top: 0;
   left: 0;
   width: 100%;
